--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,7 @@
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
@@ -86,10 +87,14 @@
             ],
             "scripts": [],
             "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "tsConfig": "tsconfig.spec.json"
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       },
       "prefix": "app",
